--- a/index.html
+++ b/index.html
@@ -6,21 +6,23 @@
   <link rel="stylesheet" href="style.css">
   <title>Tudo Pronto!</title>
   
+  <meta name="facebook-domain-verification" content="lqxfl5oxtyn8iui6962fjiv8vplk38" />
+  
   <!-- Meta Pixel Code -->
 <script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '496854198699356');
-fbq('track', 'AddToCart');
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '669756327649453');
+  fbq('track', 'AddToCart');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=496854198699356&ev=AddToCart&noscript=1"
+  src="https://www.facebook.com/tr?id=669756327649453&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
   
